// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Charts Bar Chart 1`] = `
<div
  className="Grid-sc-1m9mzof-0 dZdgqZ Page__ChartContainer-sc-5msxqn-0 dFltLJ"
>
  <div
    className="ChartContainer-sc-1lnti1a-0 creGaQ"
  >
    <div
      className="ChartContainer-sc-1lnti1a-0 creGaQ"
    >
      <h1
        className="ChartTitle__Title-sc-8rh5zq-0 gtnimY"
      >
        Chart title
      </h1>
      <svg
        fontSize={2}
        fontWeight={500}
        preserveAspectRatio="xMidYMax meet"
        viewBox="0 -7 100 66.25"
        width="100%"
      >
        <text
          fill="#71a2ff"
          x={0}
          y={3.5}
        >
          WFLA
        </text>
        <text
          fill="#71a2ff"
          x={50.89041095890411}
          y={3.5}
        >
          20.8
          
        </text>
        <rect
          fill="#71a2ff"
          height={6}
          width={39.89041095890411}
          x={10}
          y={0}
        />
        <text
          fill="#c0d4e2"
          x={0}
          y={9.5}
        >
          Region A
        </text>
        <text
          fill="#c0d4e2"
          x={79.46575342465755}
          y={9.5}
        >
          35.7
          
        </text>
        <rect
          fill="#c0d4e2"
          height={6}
          width={68.46575342465755}
          x={10}
          y={6}
        />
        <text
          fill="#cbcbcb"
          x={0}
          y={15.5}
        >
          Region B
        </text>
        <text
          fill="#cbcbcb"
          x={41.301369863013704}
          y={15.5}
        >
          15.8
          
        </text>
        <rect
          fill="#cbcbcb"
          height={6}
          width={30.3013698630137}
          x={10}
          y={12}
        />
        <text
          fill="#e57878"
          x={0}
          y={21.5}
        >
          Region C
        </text>
        <text
          fill="#e57878"
          x={89.43835616438356}
          y={21.5}
        >
          40.9
          
        </text>
        <rect
          fill="#e57878"
          height={6}
          width={78.43835616438356}
          x={10}
          y={18}
        />
        <text
          fill="#8adb96"
          x={0}
          y={27.5}
        >
          Region D
        </text>
        <text
          fill="#8adb96"
          x={56.26027397260275}
          y={27.5}
        >
          23.6
          
        </text>
        <rect
          fill="#8adb96"
          height={6}
          width={45.26027397260275}
          x={10}
          y={24}
        />
        <text
          fill="#6895eb"
          x={0}
          y={33.5}
        >
          Region E
        </text>
        <text
          fill="#6895eb"
          x={44.753424657534254}
          y={33.5}
        >
          17.6
          
        </text>
        <rect
          fill="#6895eb"
          height={6}
          width={33.753424657534254}
          x={10}
          y={30}
        />
        <text
          fill="#b8c8d8"
          x={0}
          y={39.5}
        >
          Region F
        </text>
        <text
          fill="#b8c8d8"
          x={84.06849315068494}
          y={39.5}
        >
          38.1
          
        </text>
        <rect
          fill="#b8c8d8"
          height={6}
          width={73.06849315068494}
          x={10}
          y={36}
        />
        <text
          fill="#ebebeb"
          x={0}
          y={45.5}
        >
          Region G
        </text>
        <text
          fill="#ebebeb"
          x={95}
          y={45.5}
        >
          43.8
          
        </text>
        <rect
          fill="#ebebeb"
          height={6}
          width={84}
          x={10}
          y={42}
        />
        <text
          fill="#ff7171"
          x={0}
          y={51.5}
        >
          Region H
        </text>
        <text
          fill="#ff7171"
          x={42.45205479452055}
          y={51.5}
        >
          16.4
          
        </text>
        <rect
          fill="#ff7171"
          height={6}
          width={31.45205479452055}
          x={10}
          y={48}
        />
        <line
          stroke="black"
          strokeWidth="0.1em"
          x1={10}
          x2={31}
          y1={54}
          y2={54}
        />
        <text
          fontWeight="bold"
          textAnchor="middle"
          x={29}
          y={57.5}
        >
          10
          
        </text>
        <line
          stroke="black"
          strokeWidth="0.1em"
          x1={31}
          x2={52}
          y1={54}
          y2={54}
        />
        <text
          fontWeight="bold"
          textAnchor="middle"
          x={50}
          y={57.5}
        >
          20
          
        </text>
        <line
          stroke="black"
          strokeWidth="0.1em"
          x1={52}
          x2={73}
          y1={54}
          y2={54}
        />
        <text
          fontWeight="bold"
          textAnchor="middle"
          x={71}
          y={57.5}
        >
          30
          
        </text>
        <line
          stroke="black"
          strokeWidth="0.1em"
          x1={73}
          x2={94}
          y1={54}
          y2={54}
        />
        <text
          fontWeight="bold"
          textAnchor="middle"
          x={92}
          y={57.5}
        >
          40
          
        </text>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Charts Column Chart 1`] = `
<div
  className="Grid-sc-1m9mzof-0 dZdgqZ Page__ChartContainer-sc-5msxqn-0 dFltLJ"
>
  <div
    className="ChartContainer-sc-1lnti1a-0 creGaQ"
  >
    <h1
      className="ChartTitle__Title-sc-8rh5zq-0 gtnimY"
    >
      Chart title
    </h1>
    <svg
      height="100%"
      viewBox="0 -12.25 128 228.375"
      width="100%"
    >
      <rect
        fill="#71a2ff"
        fontSize={3}
        height={66.43460964694182}
        width={10}
        x={46}
        y={43.56539035305818}
      />
      <text
        fill="#71a2ff"
        fontSize={3}
        textAnchor="middle"
        x={46}
        y={40.94039035305818}
      >
        <tspan
          dx={5}
        >
          50.1
          
        </tspan>
      </text>
      <rect
        fill="#c0d4e2"
        fontSize={3}
        height={80}
        width={10}
        x={56}
        y={30}
      />
      <text
        fill="#c0d4e2"
        fontSize={3}
        textAnchor="middle"
        x={56}
        y={27.375}
      >
        <tspan
          dx={5}
        >
          60.33
          
        </tspan>
      </text>
      <rect
        fill="#cbcbcb"
        fontSize={3}
        height={17.238521465274324}
        width={10}
        x={66}
        y={92.76147853472568}
      />
      <text
        fill="#cbcbcb"
        fontSize={3}
        textAnchor="middle"
        x={66}
        y={90.13647853472568}
      >
        <tspan
          dx={5}
        >
          13
          
        </tspan>
      </text>
      <text
        fontSize={4.5}
        textAnchor="middle"
        x={61}
        y={117.875}
      />
      <path
        d="m43 110h66"
        stroke="#000"
        strokeWidth={0.1}
      />
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={110}
      >
        <tspan>
          0
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={97.14285714285714}
      >
        <tspan>
          10
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={84.28571428571428}
      >
        <tspan>
          20
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={71.42857142857143}
      >
        <tspan>
          30
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={58.57142857142857}
      >
        <tspan>
          40
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={45.71428571428571}
      >
        <tspan>
          50
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={32.85714285714286}
      >
        <tspan>
          60
          
        </tspan>
      </text>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#71a2ff"
          height={10}
          width={10}
          x={46}
          y={141}
        />
        <text
          x={61.25}
          y={146.25}
        >
          Maelstorm
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#c0d4e2"
          height={10}
          width={10}
          x={46}
          y={154.5}
        />
        <text
          x={61.25}
          y={159.75}
        >
          Spring
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#cbcbcb"
          height={10}
          width={10}
          x={46}
          y={168}
        />
        <text
          x={61.25}
          y={173.25}
        >
          Electro
        </text>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Charts Editor Of Bar Chart 1`] = `null`;

exports[`Storyshots Charts Editor Of Column Chart 1`] = `null`;

exports[`Storyshots Charts Editor Of Line Chart 1`] = `null`;

exports[`Storyshots Charts Editor Of Pie Chart 1`] = `null`;

exports[`Storyshots Charts Editor Of Six Groups Of Six Columns 1`] = `null`;

exports[`Storyshots Charts Editor Of Six Groups Of Two Columns 1`] = `null`;

exports[`Storyshots Charts Editor Of Two Groups Of Six Columns 1`] = `null`;

exports[`Storyshots Charts Editor Of Two Groups Of Two Columns 1`] = `null`;

exports[`Storyshots Charts Line Chart 1`] = `
<div
  className="Grid-sc-1m9mzof-0 dZdgqZ Page__ChartContainer-sc-5msxqn-0 dFltLJ"
>
  <div
    className="ChartContainer-sc-1lnti1a-0 creGaQ"
  >
    <h1
      className="ChartTitle__Title-sc-8rh5zq-0 gtnimY"
    >
      Sales ($ millions)
    </h1>
    <svg
      fontSize={4}
      height="100%"
      strokeWidth={0.5}
      viewBox="0 -17.5 297 121"
      width="100%"
    >
      <marker
        id="arrowUp"
        orient="auto"
        overflow="visible"
      >
        <path
          d="m0 0 3-3-11 3 11 3-3-3z"
          fill="#000000"
          fillRule="evenodd"
          stroke="#000000"
        />
      </marker>
      <text
        fontSize={4}
        fontWeight="bold"
        textAnchor="middle"
        x={12}
        y={86}
      >
        Year 1
      </text>
      <text
        fontSize={4}
        fontWeight="bold"
        textAnchor="middle"
        x={59.8}
        y={86}
      >
        Year 2
      </text>
      <text
        fontSize={4}
        fontWeight="bold"
        textAnchor="middle"
        x={107.6}
        y={86}
      >
        Year 3
      </text>
      <text
        fontSize={4}
        fontWeight="bold"
        textAnchor="middle"
        x={155.4}
        y={86}
      >
        Year 4
      </text>
      <text
        fontSize={4}
        fontWeight="bold"
        textAnchor="middle"
        x={203.2}
        y={86}
      >
        Year 5
      </text>
      <text
        fontSize={4}
        fontWeight="bold"
        textAnchor="middle"
        x={251}
        y={86}
      >
        Year 6
      </text>
      <path
        d="m12  79 239 0"
        stroke="#505050"
      />
      <path
        d="m12  71.1 239 0"
        stroke="#f0f0f0"
      />
      <text
        fontWeight="bold"
        textAnchor="end"
        x={8}
        y={73.1}
      >
        40
      </text>
      <path
        d="m12  63.2 239 0"
        stroke="#f0f0f0"
      />
      <text
        fontWeight="bold"
        textAnchor="end"
        x={8}
        y={65.2}
      >
        80
      </text>
      <path
        d="m12  55.3 239 0"
        stroke="#f0f0f0"
      />
      <text
        fontWeight="bold"
        textAnchor="end"
        x={8}
        y={57.3}
      >
        120
      </text>
      <path
        d="m12  47.4 239 0"
        stroke="#f0f0f0"
      />
      <text
        fontWeight="bold"
        textAnchor="end"
        x={8}
        y={49.4}
      >
        160
      </text>
      <path
        d="m12  39.5 239 0"
        stroke="#f0f0f0"
      />
      <text
        fontWeight="bold"
        textAnchor="end"
        x={8}
        y={41.5}
      >
        200
      </text>
      <path
        d="m12  31.6 239 0"
        stroke="#f0f0f0"
      />
      <text
        fontWeight="bold"
        textAnchor="end"
        x={8}
        y={33.6}
      >
        240
      </text>
      <path
        d="m12  23.700000000000003 239 0"
        stroke="#f0f0f0"
      />
      <text
        fontWeight="bold"
        textAnchor="end"
        x={8}
        y={25.700000000000003}
      >
        280
      </text>
      <path
        d="m12  15.799999999999997 239 0"
        stroke="#f0f0f0"
      />
      <text
        fontWeight="bold"
        textAnchor="end"
        x={8}
        y={17.799999999999997}
      >
        320
      </text>
      <path
        d="m12  7.900000000000006 239 0"
        stroke="#f0f0f0"
      />
      <text
        fontWeight="bold"
        textAnchor="end"
        x={8}
        y={9.900000000000006}
      >
        360
      </text>
      <path
        d="m12 0v79"
        fill="none"
        markerStart="url(#arrowUp)"
        stroke="#000000"
      />
      <marker
        id={
          Array [
            "point",
            0,
          ]
        }
        orient="auto"
        overflow="visible"
      >
        <circle
          cx={0}
          fill="#71a2ff"
          r={3}
          stroke="none"
        />
      </marker>
      <path
        d="M 12 44.4375 59.8 38.71 107.6 33.3775 155.4 32.1925 203.2 23.700000000000003 251 12.0475"
        fill="none"
        markerEnd="url(#point,0)"
        markerMid="url(#point,0)"
        markerStart="url(#point,0)"
        stroke="#71a2ff"
      />
      <text
        fontSize={4}
        x={12}
        y={40.4375}
      >
        175
      </text>
      <text
        fontSize={4}
        x={59.8}
        y={34.71}
      >
        204
      </text>
      <text
        fontSize={4}
        x={107.6}
        y={29.377499999999998}
      >
        231
      </text>
      <text
        fontSize={4}
        x={155.4}
        y={28.192500000000003}
      >
        237
      </text>
      <text
        fontSize={4}
        x={203.2}
        y={19.700000000000003}
      >
        280
      </text>
      <text
        fontSize={4}
        x={251}
        y={8.0475}
      >
        339
      </text>
      <g
        fontSize={4}
        width={36}
      >
        <rect
          fill="#71a2ff"
          height={10}
          width={10}
          x={261}
          y={3.5}
        />
        <text
          x={278}
          y={10.5}
        >
          Easymode
        </text>
      </g>
      <marker
        id={
          Array [
            "point",
            1,
          ]
        }
        orient="auto"
        overflow="visible"
      >
        <circle
          cx={0}
          fill="#c0d4e2"
          r={3}
          stroke="none"
        />
      </marker>
      <path
        d="M 12 66.1625 59.8 65.57 107.6 64.5825 155.4 64.1875 203.2 63.3975 251 61.225"
        fill="none"
        markerEnd="url(#point,1)"
        markerMid="url(#point,1)"
        markerStart="url(#point,1)"
        stroke="#c0d4e2"
      />
      <text
        fontSize={4}
        x={12}
        y={62.162499999999994}
      >
        65
      </text>
      <text
        fontSize={4}
        x={59.8}
        y={61.56999999999999}
      >
        68
      </text>
      <text
        fontSize={4}
        x={107.6}
        y={60.582499999999996}
      >
        73
      </text>
      <text
        fontSize={4}
        x={155.4}
        y={60.1875}
      >
        75
      </text>
      <text
        fontSize={4}
        x={203.2}
        y={59.3975}
      >
        79
      </text>
      <text
        fontSize={4}
        x={251}
        y={57.225}
      >
        90
      </text>
      <g
        fontSize={4}
        width={36}
      >
        <rect
          fill="#c0d4e2"
          height={10}
          width={10}
          x={261}
          y={20.5}
        />
        <text
          x={278}
          y={27.5}
        >
          Rest
        </text>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Charts Pie Chart 1`] = `
<div
  className="Grid-sc-1m9mzof-0 dZdgqZ Page__ChartContainer-sc-5msxqn-0 dFltLJ"
>
  <div
    className="ChartContainer-sc-1lnti1a-0 creGaQ"
  >
    <div
      className="ChartContainer-sc-1lnti1a-0 creGaQ"
    >
      <h1
        className="ChartTitle__Title-sc-8rh5zq-0 gtnimY"
      >
        Chart title
      </h1>
      <svg
        viewBox="0 -8.75 100 107"
      >
        <path
          d="M 16.683114654475617 51.047025302604276 A 33.33333333333333 33.33333333333333 0 0 0 26.429773960448422 73.57022603955159 L 50 50 L 16.683114654475617 51.047025302604276"
          fill="#71a2ff"
        />
        <text
          fill="black"
          fontSize={4}
          textAnchor="middle"
          x={9.210905525156399}
          y={67.6510173615458}
        >
          12
          %
        </text>
        <text
          fill="black"
          fontSize={3}
          textAnchor="middle"
          x={9.210905525156399}
          y={71.1510173615458}
        >
          repairs
        </text>
        <path
          d="M 22.430647524181275 31.263887404928983 A 33.33333333333333 33.33333333333333 0 0 0 16.683114654475617 51.047025302604276 L 50 50 L 22.430647524181275 31.263887404928983"
          fill="#c0d4e2"
        />
        <text
          fill="black"
          fontSize={4}
          textAnchor="middle"
          x={7.320280636580307}
          y={37.60039528714537}
        >
          10
          %
        </text>
        <text
          fill="black"
          fontSize={3}
          textAnchor="middle"
          x={7.320280636580307}
          y={41.10039528714537}
        >
          consulting
        </text>
        <path
          d="M 34.866983342015104 20.29978252705441 A 33.33333333333333 33.33333333333333 0 0 0 22.430647524181275 31.263887404928983 L 50 50 L 34.866983342015104 20.29978252705441"
          fill="#cbcbcb"
        />
        <text
          fill="black"
          fontSize={4}
          textAnchor="middle"
          x={20.608361541171025}
          y={16.66173023864625}
        >
          8
          %
        </text>
        <text
          fill="black"
          fontSize={3}
          textAnchor="middle"
          x={20.608361541171025}
          y={20.16173023864625}
        >
          training
        </text>
        <path
          d="M 36.76173697884062 80.59182085613268 A 33.33333333333333 33.33333333333333 0 1 0 34.866983342015104 20.29978252705441 L 50 50 L 36.76173697884062 80.59182085613268"
          fill="#e57878"
        />
        <text
          fill="white"
          fontSize={4}
          textAnchor="middle"
          x={66.65844267276219}
          y={49.47648734869786}
        >
          64
          %
        </text>
        <text
          fill="white"
          fontSize={3}
          textAnchor="middle"
          x={66.65844267276219}
          y={52.97648734869786}
        >
          product sales
        </text>
        <path
          d="M 26.429773960448408 73.57022603955157 A 33.33333333333333 33.33333333333333 0 0 0 36.76173697884062 80.59182085613268 L 50 50 L 26.429773960448408 73.57022603955157"
          fill="#8adb96"
        />
        <text
          fill="black"
          fontSize={4}
          textAnchor="middle"
          x={25.01851653990525}
          y={86.75913663442492}
        >
          6
          %
        </text>
        <text
          fill="black"
          fontSize={3}
          textAnchor="middle"
          x={25.01851653990525}
          y={90.25913663442492}
        >
          others
        </text>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Charts Six Groups Of Six Columns 1`] = `
<div
  className="Grid-sc-1m9mzof-0 dZdgqZ Page__ChartContainer-sc-5msxqn-0 dFltLJ"
>
  <div
    className="ChartContainer-sc-1lnti1a-0 creGaQ"
  >
    <h1
      className="ChartTitle__Title-sc-8rh5zq-0 gtnimY"
    >
      Column chart: 3 groups of 5 elements
    </h1>
    <svg
      height="100%"
      viewBox="0 -12.25 474 228.375"
      width="100%"
    >
      <rect
        fill="#71a2ff"
        fontSize={3}
        height={39.992017561364996}
        width={10}
        x={46}
        y={70.007982438635}
      />
      <text
        fill="#71a2ff"
        fontSize={3}
        textAnchor="middle"
        x={46}
        y={67.382982438635}
      >
        <tspan
          dx={5}
        >
          50.1
          
        </tspan>
      </text>
      <rect
        fill="#c0d4e2"
        fontSize={3}
        height={48.15805228497305}
        width={10}
        x={56}
        y={61.84194771502695}
      />
      <text
        fill="#c0d4e2"
        fontSize={3}
        textAnchor="middle"
        x={56}
        y={59.21694771502695}
      >
        <tspan
          dx={5}
        >
          60.33
          
        </tspan>
      </text>
      <rect
        fill="#cbcbcb"
        fontSize={3}
        height={10.37717022550389}
        width={10}
        x={66}
        y={99.62282977449611}
      />
      <text
        fill="#cbcbcb"
        fontSize={3}
        textAnchor="middle"
        x={66}
        y={96.99782977449611}
      >
        <tspan
          dx={5}
        >
          13
          
        </tspan>
      </text>
      <rect
        fill="#e57878"
        fontSize={3}
        height={18.359608860506885}
        width={10}
        x={76}
        y={91.64039113949312}
      />
      <text
        fill="#e57878"
        fontSize={3}
        textAnchor="middle"
        x={76}
        y={89.01539113949312}
      >
        <tspan
          dx={5}
        >
          23
          
        </tspan>
      </text>
      <rect
        fill="#8adb96"
        fontSize={3}
        height={26.342047495509878}
        width={10}
        x={86}
        y={83.65795250449013}
      />
      <text
        fill="#8adb96"
        fontSize={3}
        textAnchor="middle"
        x={86}
        y={81.03295250449013}
      >
        <tspan
          dx={5}
        >
          33
          
        </tspan>
      </text>
      <rect
        fill="#6895eb"
        fontSize={3}
        height={40.710437038515266}
        width={10}
        x={96}
        y={69.28956296148473}
      />
      <text
        fill="#6895eb"
        fontSize={3}
        textAnchor="middle"
        x={96}
        y={66.66456296148473}
      >
        <tspan
          dx={5}
        >
          51
          
        </tspan>
      </text>
      <text
        fontSize={4.5}
        textAnchor="middle"
        x={76}
        y={117.875}
      >
        Group 1
      </text>
      <rect
        fill="#71a2ff"
        fontSize={3}
        height={71.84194771502695}
        width={10}
        x={112}
        y={38.15805228497305}
      />
      <text
        fill="#71a2ff"
        fontSize={3}
        textAnchor="middle"
        x={112}
        y={35.53305228497305}
      >
        <tspan
          dx={5}
        >
          90
          
        </tspan>
      </text>
      <rect
        fill="#c0d4e2"
        fontSize={3}
        height={80}
        width={10}
        x={122}
        y={30}
      />
      <text
        fill="#c0d4e2"
        fontSize={3}
        textAnchor="middle"
        x={122}
        y={27.375}
      >
        <tspan
          dx={5}
        >
          100.22
          
        </tspan>
      </text>
      <rect
        fill="#cbcbcb"
        fontSize={3}
        height={11.17541408900419}
        width={10}
        x={132}
        y={98.82458591099581}
      />
      <text
        fill="#cbcbcb"
        fontSize={3}
        textAnchor="middle"
        x={132}
        y={96.19958591099581}
      >
        <tspan
          dx={5}
        >
          14
          
        </tspan>
      </text>
      <rect
        fill="#e57878"
        fontSize={3}
        height={8.15805228497306}
        width={10}
        x={142}
        y={101.84194771502695}
      />
      <text
        fill="#e57878"
        fontSize={3}
        textAnchor="middle"
        x={142}
        y={99.21694771502695}
      >
        <tspan
          dx={5}
        >
          10.22
          
        </tspan>
      </text>
      <rect
        fill="#8adb96"
        fontSize={3}
        height={11.17541408900419}
        width={10}
        x={152}
        y={98.82458591099581}
      />
      <text
        fill="#8adb96"
        fontSize={3}
        textAnchor="middle"
        x={152}
        y={96.19958591099581}
      >
        <tspan
          dx={5}
        >
          14
          
        </tspan>
      </text>
      <rect
        fill="#6895eb"
        fontSize={3}
        height={21.55258431450808}
        width={10}
        x={162}
        y={88.44741568549192}
      />
      <text
        fill="#6895eb"
        fontSize={3}
        textAnchor="middle"
        x={162}
        y={85.82241568549192}
      >
        <tspan
          dx={5}
        >
          27
          
        </tspan>
      </text>
      <text
        fontSize={4.5}
        textAnchor="middle"
        x={142}
        y={117.875}
      >
        Group 2
      </text>
      <rect
        fill="#71a2ff"
        fontSize={3}
        height={52.684094991019755}
        width={10}
        x={178}
        y={57.315905008980245}
      />
      <text
        fill="#71a2ff"
        fontSize={3}
        textAnchor="middle"
        x={178}
        y={54.690905008980245}
      >
        <tspan
          dx={5}
        >
          66
          
        </tspan>
      </text>
      <rect
        fill="#c0d4e2"
        fontSize={3}
        height={23.14907204150868}
        width={10}
        x={188}
        y={86.85092795849133}
      />
      <text
        fill="#c0d4e2"
        fontSize={3}
        textAnchor="middle"
        x={188}
        y={84.22592795849133}
      >
        <tspan
          dx={5}
        >
          29
          
        </tspan>
      </text>
      <rect
        fill="#cbcbcb"
        fontSize={3}
        height={15.166633406505687}
        width={10}
        x={198}
        y={94.83336659349432}
      />
      <text
        fill="#cbcbcb"
        fontSize={3}
        textAnchor="middle"
        x={198}
        y={92.20836659349432}
      >
        <tspan
          dx={5}
        >
          19
          
        </tspan>
      </text>
      <rect
        fill="#e57878"
        fontSize={3}
        height={39.91219317501497}
        width={10}
        x={208}
        y={70.08780682498502}
      />
      <text
        fill="#e57878"
        fontSize={3}
        textAnchor="middle"
        x={208}
        y={67.46280682498502}
      >
        <tspan
          dx={5}
        >
          50
          
        </tspan>
      </text>
      <rect
        fill="#8adb96"
        fontSize={3}
        height={76.19237677110357}
        width={10}
        x={218}
        y={33.80762322889643}
      />
      <text
        fill="#8adb96"
        fontSize={3}
        textAnchor="middle"
        x={218}
        y={31.182623228896432}
      >
        <tspan
          dx={5}
        >
          95.45
          
        </tspan>
      </text>
      <rect
        fill="#6895eb"
        fontSize={3}
        height={79.82438635002994}
        width={10}
        x={228}
        y={30.17561364997006}
      />
      <text
        fill="#6895eb"
        fontSize={3}
        textAnchor="middle"
        x={228}
        y={27.55061364997006}
      >
        <tspan
          dx={5}
        >
          100
          
        </tspan>
      </text>
      <text
        fontSize={4.5}
        textAnchor="middle"
        x={208}
        y={117.875}
      >
        Group 3
      </text>
      <rect
        fill="#71a2ff"
        fontSize={3}
        height={39.992017561364996}
        width={10}
        x={244}
        y={70.007982438635}
      />
      <text
        fill="#71a2ff"
        fontSize={3}
        textAnchor="middle"
        x={244}
        y={67.382982438635}
      >
        <tspan
          dx={5}
        >
          50.1
          
        </tspan>
      </text>
      <rect
        fill="#c0d4e2"
        fontSize={3}
        height={48.15805228497305}
        width={10}
        x={254}
        y={61.84194771502695}
      />
      <text
        fill="#c0d4e2"
        fontSize={3}
        textAnchor="middle"
        x={254}
        y={59.21694771502695}
      >
        <tspan
          dx={5}
        >
          60.33
          
        </tspan>
      </text>
      <rect
        fill="#cbcbcb"
        fontSize={3}
        height={10.37717022550389}
        width={10}
        x={264}
        y={99.62282977449611}
      />
      <text
        fill="#cbcbcb"
        fontSize={3}
        textAnchor="middle"
        x={264}
        y={96.99782977449611}
      >
        <tspan
          dx={5}
        >
          13
          
        </tspan>
      </text>
      <rect
        fill="#e57878"
        fontSize={3}
        height={18.359608860506885}
        width={10}
        x={274}
        y={91.64039113949312}
      />
      <text
        fill="#e57878"
        fontSize={3}
        textAnchor="middle"
        x={274}
        y={89.01539113949312}
      >
        <tspan
          dx={5}
        >
          23
          
        </tspan>
      </text>
      <rect
        fill="#8adb96"
        fontSize={3}
        height={26.342047495509878}
        width={10}
        x={284}
        y={83.65795250449013}
      />
      <text
        fill="#8adb96"
        fontSize={3}
        textAnchor="middle"
        x={284}
        y={81.03295250449013}
      >
        <tspan
          dx={5}
        >
          33
          
        </tspan>
      </text>
      <rect
        fill="#6895eb"
        fontSize={3}
        height={57.8726801037717}
        width={10}
        x={294}
        y={52.1273198962283}
      />
      <text
        fill="#6895eb"
        fontSize={3}
        textAnchor="middle"
        x={294}
        y={49.5023198962283}
      >
        <tspan
          dx={5}
        >
          72.5
          
        </tspan>
      </text>
      <text
        fontSize={4.5}
        textAnchor="middle"
        x={274}
        y={117.875}
      >
        Group 4
      </text>
      <rect
        fill="#71a2ff"
        fontSize={3}
        height={71.84194771502695}
        width={10}
        x={310}
        y={38.15805228497305}
      />
      <text
        fill="#71a2ff"
        fontSize={3}
        textAnchor="middle"
        x={310}
        y={35.53305228497305}
      >
        <tspan
          dx={5}
        >
          90
          
        </tspan>
      </text>
      <rect
        fill="#c0d4e2"
        fontSize={3}
        height={80}
        width={10}
        x={320}
        y={30}
      />
      <text
        fill="#c0d4e2"
        fontSize={3}
        textAnchor="middle"
        x={320}
        y={27.375}
      >
        <tspan
          dx={5}
        >
          100.22
          
        </tspan>
      </text>
      <rect
        fill="#cbcbcb"
        fontSize={3}
        height={11.17541408900419}
        width={10}
        x={330}
        y={98.82458591099581}
      />
      <text
        fill="#cbcbcb"
        fontSize={3}
        textAnchor="middle"
        x={330}
        y={96.19958591099581}
      >
        <tspan
          dx={5}
        >
          14
          
        </tspan>
      </text>
      <rect
        fill="#e57878"
        fontSize={3}
        height={8.15805228497306}
        width={10}
        x={340}
        y={101.84194771502695}
      />
      <text
        fill="#e57878"
        fontSize={3}
        textAnchor="middle"
        x={340}
        y={99.21694771502695}
      >
        <tspan
          dx={5}
        >
          10.22
          
        </tspan>
      </text>
      <rect
        fill="#8adb96"
        fontSize={3}
        height={11.17541408900419}
        width={10}
        x={350}
        y={98.82458591099581}
      />
      <text
        fill="#8adb96"
        fontSize={3}
        textAnchor="middle"
        x={350}
        y={96.19958591099581}
      >
        <tspan
          dx={5}
        >
          14
          
        </tspan>
      </text>
      <rect
        fill="#6895eb"
        fontSize={3}
        height={24.945120734384354}
        width={10}
        x={360}
        y={85.05487926561565}
      />
      <text
        fill="#6895eb"
        fontSize={3}
        textAnchor="middle"
        x={360}
        y={82.42987926561565}
      >
        <tspan
          dx={5}
        >
          31.25
          
        </tspan>
      </text>
      <text
        fontSize={4.5}
        textAnchor="middle"
        x={340}
        y={117.875}
      >
        Group 5
      </text>
      <rect
        fill="#71a2ff"
        fontSize={3}
        height={52.684094991019755}
        width={10}
        x={376}
        y={57.315905008980245}
      />
      <text
        fill="#71a2ff"
        fontSize={3}
        textAnchor="middle"
        x={376}
        y={54.690905008980245}
      >
        <tspan
          dx={5}
        >
          66
          
        </tspan>
      </text>
      <rect
        fill="#c0d4e2"
        fontSize={3}
        height={23.14907204150868}
        width={10}
        x={386}
        y={86.85092795849133}
      />
      <text
        fill="#c0d4e2"
        fontSize={3}
        textAnchor="middle"
        x={386}
        y={84.22592795849133}
      >
        <tspan
          dx={5}
        >
          29
          
        </tspan>
      </text>
      <rect
        fill="#cbcbcb"
        fontSize={3}
        height={15.166633406505687}
        width={10}
        x={396}
        y={94.83336659349432}
      />
      <text
        fill="#cbcbcb"
        fontSize={3}
        textAnchor="middle"
        x={396}
        y={92.20836659349432}
      >
        <tspan
          dx={5}
        >
          19
          
        </tspan>
      </text>
      <rect
        fill="#e57878"
        fontSize={3}
        height={39.91219317501497}
        width={10}
        x={406}
        y={70.08780682498502}
      />
      <text
        fill="#e57878"
        fontSize={3}
        textAnchor="middle"
        x={406}
        y={67.46280682498502}
      >
        <tspan
          dx={5}
        >
          50
          
        </tspan>
      </text>
      <rect
        fill="#8adb96"
        fontSize={3}
        height={76.19237677110357}
        width={10}
        x={416}
        y={33.80762322889643}
      />
      <text
        fill="#8adb96"
        fontSize={3}
        textAnchor="middle"
        x={416}
        y={31.182623228896432}
      >
        <tspan
          dx={5}
        >
          95.45
          
        </tspan>
      </text>
      <rect
        fill="#6895eb"
        fontSize={3}
        height={3.9912193175014967}
        width={10}
        x={426}
        y={106.0087806824985}
      />
      <text
        fill="#6895eb"
        fontSize={3}
        textAnchor="middle"
        x={426}
        y={103.3837806824985}
      >
        <tspan
          dx={5}
        >
          5
          
        </tspan>
      </text>
      <text
        fontSize={4.5}
        textAnchor="middle"
        x={406}
        y={117.875}
      >
        Group 6
      </text>
      <path
        d="m43 110h396"
        stroke="#000"
        strokeWidth={0.1}
      />
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={110}
      >
        <tspan>
          0
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={101.81818181818181}
      >
        <tspan>
          10
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={93.63636363636364}
      >
        <tspan>
          20
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={85.45454545454545}
      >
        <tspan>
          30
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={77.27272727272728}
      >
        <tspan>
          40
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={69.0909090909091}
      >
        <tspan>
          50
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={60.90909090909091}
      >
        <tspan>
          60
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={52.72727272727273}
      >
        <tspan>
          70
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={44.54545454545455}
      >
        <tspan>
          80
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={36.36363636363636}
      >
        <tspan>
          90
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={28.181818181818187}
      >
        <tspan>
          100
          
        </tspan>
      </text>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#71a2ff"
          height={10}
          width={10}
          x={46}
          y={141}
        />
        <text
          x={61.25}
          y={146.25}
        >
          Maelstorm
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#c0d4e2"
          height={10}
          width={10}
          x={112}
          y={141}
        />
        <text
          x={127.25}
          y={146.25}
        >
          Spring
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#cbcbcb"
          height={10}
          width={10}
          x={178}
          y={141}
        />
        <text
          x={193.25}
          y={146.25}
        >
          Electro
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#e57878"
          height={10}
          width={10}
          x={244}
          y={141}
        />
        <text
          x={259.25}
          y={146.25}
        >
          HBO
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#8adb96"
          height={10}
          width={10}
          x={310}
          y={141}
        />
        <text
          x={325.25}
          y={146.25}
        >
          Netflix
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#6895eb"
          height={10}
          width={10}
          x={376}
          y={141}
        />
        <text
          x={391.25}
          y={146.25}
        >
          Amazon
        </text>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Charts Six Groups Of Two Columns 1`] = `
<div
  className="Grid-sc-1m9mzof-0 dZdgqZ Page__ChartContainer-sc-5msxqn-0 dFltLJ"
>
  <div
    className="ChartContainer-sc-1lnti1a-0 creGaQ"
  >
    <h1
      className="ChartTitle__Title-sc-8rh5zq-0 gtnimY"
    >
      Column chart: 4 groups of 3 elements
    </h1>
    <svg
      height="100%"
      viewBox="0 -12.25 474 228.375"
      width="100%"
    >
      <rect
        fill="#71a2ff"
        fontSize={3}
        height={39.992017561364996}
        width={10}
        x={46}
        y={70.007982438635}
      />
      <text
        fill="#71a2ff"
        fontSize={3}
        textAnchor="middle"
        x={46}
        y={67.382982438635}
      >
        <tspan
          dx={5}
        >
          50.1
          
        </tspan>
      </text>
      <rect
        fill="#c0d4e2"
        fontSize={3}
        height={48.15805228497305}
        width={10}
        x={56}
        y={61.84194771502695}
      />
      <text
        fill="#c0d4e2"
        fontSize={3}
        textAnchor="middle"
        x={56}
        y={59.21694771502695}
      >
        <tspan
          dx={5}
        >
          60.33
          
        </tspan>
      </text>
      <rect
        fill="#cbcbcb"
        fontSize={3}
        height={10.37717022550389}
        width={10}
        x={66}
        y={99.62282977449611}
      />
      <text
        fill="#cbcbcb"
        fontSize={3}
        textAnchor="middle"
        x={66}
        y={96.99782977449611}
      >
        <tspan
          dx={5}
        >
          13
          
        </tspan>
      </text>
      <text
        fontSize={4.5}
        textAnchor="middle"
        x={61}
        y={117.875}
      >
        Group 1
      </text>
      <rect
        fill="#71a2ff"
        fontSize={3}
        height={71.84194771502695}
        width={10}
        x={112}
        y={38.15805228497305}
      />
      <text
        fill="#71a2ff"
        fontSize={3}
        textAnchor="middle"
        x={112}
        y={35.53305228497305}
      >
        <tspan
          dx={5}
        >
          90
          
        </tspan>
      </text>
      <rect
        fill="#c0d4e2"
        fontSize={3}
        height={80}
        width={10}
        x={122}
        y={30}
      />
      <text
        fill="#c0d4e2"
        fontSize={3}
        textAnchor="middle"
        x={122}
        y={27.375}
      >
        <tspan
          dx={5}
        >
          100.22
          
        </tspan>
      </text>
      <rect
        fill="#cbcbcb"
        fontSize={3}
        height={11.17541408900419}
        width={10}
        x={132}
        y={98.82458591099581}
      />
      <text
        fill="#cbcbcb"
        fontSize={3}
        textAnchor="middle"
        x={132}
        y={96.19958591099581}
      >
        <tspan
          dx={5}
        >
          14
          
        </tspan>
      </text>
      <text
        fontSize={4.5}
        textAnchor="middle"
        x={127}
        y={117.875}
      >
        Group 2
      </text>
      <rect
        fill="#71a2ff"
        fontSize={3}
        height={52.684094991019755}
        width={10}
        x={178}
        y={57.315905008980245}
      />
      <text
        fill="#71a2ff"
        fontSize={3}
        textAnchor="middle"
        x={178}
        y={54.690905008980245}
      >
        <tspan
          dx={5}
        >
          66
          
        </tspan>
      </text>
      <rect
        fill="#c0d4e2"
        fontSize={3}
        height={23.14907204150868}
        width={10}
        x={188}
        y={86.85092795849133}
      />
      <text
        fill="#c0d4e2"
        fontSize={3}
        textAnchor="middle"
        x={188}
        y={84.22592795849133}
      >
        <tspan
          dx={5}
        >
          29
          
        </tspan>
      </text>
      <rect
        fill="#cbcbcb"
        fontSize={3}
        height={15.166633406505687}
        width={10}
        x={198}
        y={94.83336659349432}
      />
      <text
        fill="#cbcbcb"
        fontSize={3}
        textAnchor="middle"
        x={198}
        y={92.20836659349432}
      >
        <tspan
          dx={5}
        >
          19
          
        </tspan>
      </text>
      <text
        fontSize={4.5}
        textAnchor="middle"
        x={193}
        y={117.875}
      >
        Group 3
      </text>
      <rect
        fill="#71a2ff"
        fontSize={3}
        height={24.02714029135901}
        width={10}
        x={244}
        y={85.97285970864098}
      />
      <text
        fill="#71a2ff"
        fontSize={3}
        textAnchor="middle"
        x={244}
        y={83.34785970864098}
      >
        <tspan
          dx={5}
        >
          30.1
          
        </tspan>
      </text>
      <rect
        fill="#c0d4e2"
        fontSize={3}
        height={6.649371382957494}
        width={10}
        x={254}
        y={103.3506286170425}
      />
      <text
        fill="#c0d4e2"
        fontSize={3}
        textAnchor="middle"
        x={254}
        y={100.7256286170425}
      >
        <tspan
          dx={5}
        >
          8.33
          
        </tspan>
      </text>
      <rect
        fill="#cbcbcb"
        fontSize={3}
        height={79.82438635002994}
        width={10}
        x={264}
        y={30.17561364997006}
      />
      <text
        fill="#cbcbcb"
        fontSize={3}
        textAnchor="middle"
        x={264}
        y={27.55061364997006}
      >
        <tspan
          dx={5}
        >
          100
          
        </tspan>
      </text>
      <text
        fontSize={4.5}
        textAnchor="middle"
        x={259}
        y={117.875}
      >
        Group 4
      </text>
      <rect
        fill="#71a2ff"
        fontSize={3}
        height={31.929754540011974}
        width={10}
        x={310}
        y={78.07024545998803}
      />
      <text
        fill="#71a2ff"
        fontSize={3}
        textAnchor="middle"
        x={310}
        y={75.44524545998803}
      >
        <tspan
          dx={5}
        >
          40
          
        </tspan>
      </text>
      <rect
        fill="#c0d4e2"
        fontSize={3}
        height={72.01756136499701}
        width={10}
        x={320}
        y={37.98243863500299}
      />
      <text
        fill="#c0d4e2"
        fontSize={3}
        textAnchor="middle"
        x={320}
        y={35.35743863500299}
      >
        <tspan
          dx={5}
        >
          90.22
          
        </tspan>
      </text>
      <rect
        fill="#cbcbcb"
        fontSize={3}
        height={64.65775294352424}
        width={10}
        x={330}
        y={45.342247056475756}
      />
      <text
        fill="#cbcbcb"
        fontSize={3}
        textAnchor="middle"
        x={330}
        y={42.717247056475756}
      >
        <tspan
          dx={5}
        >
          81
          
        </tspan>
      </text>
      <text
        fontSize={4.5}
        textAnchor="middle"
        x={325}
        y={117.875}
      >
        Group 5
      </text>
      <rect
        fill="#71a2ff"
        fontSize={3}
        height={79.92815805228497}
        width={10}
        x={376}
        y={30.07184194771503}
      />
      <text
        fill="#71a2ff"
        fontSize={3}
        textAnchor="middle"
        x={376}
        y={27.44684194771503}
      >
        <tspan
          dx={5}
        >
          100.13
          
        </tspan>
      </text>
      <rect
        fill="#c0d4e2"
        fontSize={3}
        height={58.27180203552185}
        width={10}
        x={386}
        y={51.72819796447815}
      />
      <text
        fill="#c0d4e2"
        fontSize={3}
        textAnchor="middle"
        x={386}
        y={49.10319796447815}
      >
        <tspan
          dx={5}
        >
          73
          
        </tspan>
      </text>
      <rect
        fill="#cbcbcb"
        fontSize={3}
        height={27.140291359010178}
        width={10}
        x={396}
        y={82.85970864098982}
      />
      <text
        fill="#cbcbcb"
        fontSize={3}
        textAnchor="middle"
        x={396}
        y={80.23470864098982}
      >
        <tspan
          dx={5}
        >
          34
          
        </tspan>
      </text>
      <text
        fontSize={4.5}
        textAnchor="middle"
        x={391}
        y={117.875}
      >
        Group 6
      </text>
      <path
        d="m43 110h366"
        stroke="#000"
        strokeWidth={0.1}
      />
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={110}
      >
        <tspan>
          0
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={101.81818181818181}
      >
        <tspan>
          10
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={93.63636363636364}
      >
        <tspan>
          20
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={85.45454545454545}
      >
        <tspan>
          30
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={77.27272727272728}
      >
        <tspan>
          40
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={69.0909090909091}
      >
        <tspan>
          50
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={60.90909090909091}
      >
        <tspan>
          60
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={52.72727272727273}
      >
        <tspan>
          70
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={44.54545454545455}
      >
        <tspan>
          80
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={36.36363636363636}
      >
        <tspan>
          90
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={28.181818181818187}
      >
        <tspan>
          100
          
        </tspan>
      </text>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#71a2ff"
          height={10}
          width={10}
          x={46}
          y={141}
        />
        <text
          x={61.25}
          y={146.25}
        >
          Maelstorm
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#c0d4e2"
          height={10}
          width={10}
          x={112}
          y={141}
        />
        <text
          x={127.25}
          y={146.25}
        >
          Spring
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#cbcbcb"
          height={10}
          width={10}
          x={178}
          y={141}
        />
        <text
          x={193.25}
          y={146.25}
        >
          Electro
        </text>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Charts Two Groups Of Six Columns 1`] = `
<div
  className="Grid-sc-1m9mzof-0 dZdgqZ Page__ChartContainer-sc-5msxqn-0 dFltLJ"
>
  <div
    className="ChartContainer-sc-1lnti1a-0 creGaQ"
  >
    <h1
      className="ChartTitle__Title-sc-8rh5zq-0 gtnimY"
    >
      Column chart: 3 groups of 5 elements
    </h1>
    <svg
      height="100%"
      viewBox="0 -12.25 198 228.375"
      width="100%"
    >
      <rect
        fill="#71a2ff"
        fontSize={3}
        height={39.992017561364996}
        width={10}
        x={46}
        y={70.007982438635}
      />
      <text
        fill="#71a2ff"
        fontSize={3}
        textAnchor="middle"
        x={46}
        y={67.382982438635}
      >
        <tspan
          dx={5}
        >
          50.1
          
        </tspan>
      </text>
      <rect
        fill="#c0d4e2"
        fontSize={3}
        height={48.15805228497305}
        width={10}
        x={56}
        y={61.84194771502695}
      />
      <text
        fill="#c0d4e2"
        fontSize={3}
        textAnchor="middle"
        x={56}
        y={59.21694771502695}
      >
        <tspan
          dx={5}
        >
          60.33
          
        </tspan>
      </text>
      <rect
        fill="#cbcbcb"
        fontSize={3}
        height={10.37717022550389}
        width={10}
        x={66}
        y={99.62282977449611}
      />
      <text
        fill="#cbcbcb"
        fontSize={3}
        textAnchor="middle"
        x={66}
        y={96.99782977449611}
      >
        <tspan
          dx={5}
        >
          13
          
        </tspan>
      </text>
      <rect
        fill="#e57878"
        fontSize={3}
        height={18.359608860506885}
        width={10}
        x={76}
        y={91.64039113949312}
      />
      <text
        fill="#e57878"
        fontSize={3}
        textAnchor="middle"
        x={76}
        y={89.01539113949312}
      >
        <tspan
          dx={5}
        >
          23
          
        </tspan>
      </text>
      <rect
        fill="#8adb96"
        fontSize={3}
        height={26.342047495509878}
        width={10}
        x={86}
        y={83.65795250449013}
      />
      <text
        fill="#8adb96"
        fontSize={3}
        textAnchor="middle"
        x={86}
        y={81.03295250449013}
      >
        <tspan
          dx={5}
        >
          33
          
        </tspan>
      </text>
      <rect
        fill="#6895eb"
        fontSize={3}
        height={40.710437038515266}
        width={10}
        x={96}
        y={69.28956296148473}
      />
      <text
        fill="#6895eb"
        fontSize={3}
        textAnchor="middle"
        x={96}
        y={66.66456296148473}
      >
        <tspan
          dx={5}
        >
          51
          
        </tspan>
      </text>
      <text
        fontSize={4.5}
        textAnchor="middle"
        x={76}
        y={117.875}
      >
        Group 1
      </text>
      <rect
        fill="#71a2ff"
        fontSize={3}
        height={71.84194771502695}
        width={10}
        x={112}
        y={38.15805228497305}
      />
      <text
        fill="#71a2ff"
        fontSize={3}
        textAnchor="middle"
        x={112}
        y={35.53305228497305}
      >
        <tspan
          dx={5}
        >
          90
          
        </tspan>
      </text>
      <rect
        fill="#c0d4e2"
        fontSize={3}
        height={80}
        width={10}
        x={122}
        y={30}
      />
      <text
        fill="#c0d4e2"
        fontSize={3}
        textAnchor="middle"
        x={122}
        y={27.375}
      >
        <tspan
          dx={5}
        >
          100.22
          
        </tspan>
      </text>
      <rect
        fill="#cbcbcb"
        fontSize={3}
        height={11.17541408900419}
        width={10}
        x={132}
        y={98.82458591099581}
      />
      <text
        fill="#cbcbcb"
        fontSize={3}
        textAnchor="middle"
        x={132}
        y={96.19958591099581}
      >
        <tspan
          dx={5}
        >
          14
          
        </tspan>
      </text>
      <rect
        fill="#e57878"
        fontSize={3}
        height={8.15805228497306}
        width={10}
        x={142}
        y={101.84194771502695}
      />
      <text
        fill="#e57878"
        fontSize={3}
        textAnchor="middle"
        x={142}
        y={99.21694771502695}
      >
        <tspan
          dx={5}
        >
          10.22
          
        </tspan>
      </text>
      <rect
        fill="#8adb96"
        fontSize={3}
        height={11.17541408900419}
        width={10}
        x={152}
        y={98.82458591099581}
      />
      <text
        fill="#8adb96"
        fontSize={3}
        textAnchor="middle"
        x={152}
        y={96.19958591099581}
      >
        <tspan
          dx={5}
        >
          14
          
        </tspan>
      </text>
      <rect
        fill="#6895eb"
        fontSize={3}
        height={24.945120734384354}
        width={10}
        x={162}
        y={85.05487926561565}
      />
      <text
        fill="#6895eb"
        fontSize={3}
        textAnchor="middle"
        x={162}
        y={82.42987926561565}
      >
        <tspan
          dx={5}
        >
          31.25
          
        </tspan>
      </text>
      <text
        fontSize={4.5}
        textAnchor="middle"
        x={142}
        y={117.875}
      >
        Group 5
      </text>
      <path
        d="m43 110h132"
        stroke="#000"
        strokeWidth={0.1}
      />
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={110}
      >
        <tspan>
          0
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={101.81818181818181}
      >
        <tspan>
          10
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={93.63636363636364}
      >
        <tspan>
          20
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={85.45454545454545}
      >
        <tspan>
          30
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={77.27272727272728}
      >
        <tspan>
          40
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={69.0909090909091}
      >
        <tspan>
          50
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={60.90909090909091}
      >
        <tspan>
          60
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={52.72727272727273}
      >
        <tspan>
          70
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={44.54545454545455}
      >
        <tspan>
          80
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={36.36363636363636}
      >
        <tspan>
          90
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={28.181818181818187}
      >
        <tspan>
          100
          
        </tspan>
      </text>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#71a2ff"
          height={10}
          width={10}
          x={46}
          y={141}
        />
        <text
          x={61.25}
          y={146.25}
        >
          Maelstorm
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#c0d4e2"
          height={10}
          width={10}
          x={112}
          y={141}
        />
        <text
          x={127.25}
          y={146.25}
        >
          Spring
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#cbcbcb"
          height={10}
          width={10}
          x={46}
          y={154.5}
        />
        <text
          x={61.25}
          y={159.75}
        >
          Electro
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#e57878"
          height={10}
          width={10}
          x={112}
          y={154.5}
        />
        <text
          x={127.25}
          y={159.75}
        >
          HBO
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#8adb96"
          height={10}
          width={10}
          x={46}
          y={168}
        />
        <text
          x={61.25}
          y={173.25}
        >
          Netflix
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#6895eb"
          height={10}
          width={10}
          x={112}
          y={168}
        />
        <text
          x={127.25}
          y={173.25}
        >
          Amazon
        </text>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Charts Two Groups Of Six Columns Min Value 20 Max Value 100 And Dy 5 1`] = `
<div
  className="Grid-sc-1m9mzof-0 dZdgqZ Page__ChartContainer-sc-5msxqn-0 dFltLJ"
>
  <div
    className="ChartContainer-sc-1lnti1a-0 creGaQ"
  >
    <h1
      className="ChartTitle__Title-sc-8rh5zq-0 gtnimY"
    >
      Column chart: 3 groups of 5 elements
    </h1>
    <svg
      height="100%"
      viewBox="0 -12.25 198 228.375"
      width="100%"
    >
      <rect
        fill="#71a2ff"
        fontSize={3}
        height={30.1}
        width={10}
        x={46}
        y={79.9}
      />
      <text
        fill="#71a2ff"
        fontSize={3}
        textAnchor="middle"
        x={46}
        y={77.275}
      >
        <tspan
          dx={5}
        >
          50.1
          
        </tspan>
      </text>
      <rect
        fill="#c0d4e2"
        fontSize={3}
        height={40.33}
        width={10}
        x={56}
        y={69.67}
      />
      <text
        fill="#c0d4e2"
        fontSize={3}
        textAnchor="middle"
        x={56}
        y={67.045}
      >
        <tspan
          dx={5}
        >
          60.33
          
        </tspan>
      </text>
      <rect
        fill="#cbcbcb"
        fontSize={3}
        height={-7}
        width={10}
        x={66}
        y={117}
      />
      <text
        fill="#cbcbcb"
        fontSize={3}
        textAnchor="middle"
        x={66}
        y={107.375}
      >
        <tspan
          dx={5}
        >
          &lt; 20
          
        </tspan>
      </text>
      <rect
        fill="#e57878"
        fontSize={3}
        height={3}
        width={10}
        x={76}
        y={107}
      />
      <text
        fill="#e57878"
        fontSize={3}
        textAnchor="middle"
        x={76}
        y={104.375}
      >
        <tspan
          dx={5}
        >
          23
          
        </tspan>
      </text>
      <rect
        fill="#8adb96"
        fontSize={3}
        height={13}
        width={10}
        x={86}
        y={97}
      />
      <text
        fill="#8adb96"
        fontSize={3}
        textAnchor="middle"
        x={86}
        y={94.375}
      >
        <tspan
          dx={5}
        >
          33
          
        </tspan>
      </text>
      <rect
        fill="#6895eb"
        fontSize={3}
        height={31}
        width={10}
        x={96}
        y={79}
      />
      <text
        fill="#6895eb"
        fontSize={3}
        textAnchor="middle"
        x={96}
        y={76.375}
      >
        <tspan
          dx={5}
        >
          51
          
        </tspan>
      </text>
      <text
        fontSize={4.5}
        textAnchor="middle"
        x={76}
        y={117.875}
      >
        Group 1
      </text>
      <rect
        fill="#71a2ff"
        fontSize={3}
        height={70}
        width={10}
        x={112}
        y={40}
      />
      <text
        fill="#71a2ff"
        fontSize={3}
        textAnchor="middle"
        x={112}
        y={37.375}
      >
        <tspan
          dx={5}
        >
          90
          
        </tspan>
      </text>
      <rect
        fill="#c0d4e2"
        fontSize={3}
        height={80.22}
        width={10}
        x={122}
        y={29.78}
      />
      <text
        fill="#c0d4e2"
        fontSize={3}
        textAnchor="middle"
        x={122}
        y={27.155}
      >
        <tspan
          dx={5}
        >
          &gt; 100
          
        </tspan>
      </text>
      <rect
        fill="#cbcbcb"
        fontSize={3}
        height={-6}
        width={10}
        x={132}
        y={116}
      />
      <text
        fill="#cbcbcb"
        fontSize={3}
        textAnchor="middle"
        x={132}
        y={107.375}
      >
        <tspan
          dx={5}
        >
          &lt; 20
          
        </tspan>
      </text>
      <rect
        fill="#e57878"
        fontSize={3}
        height={-9.78}
        width={10}
        x={142}
        y={119.78}
      />
      <text
        fill="#e57878"
        fontSize={3}
        textAnchor="middle"
        x={142}
        y={107.375}
      >
        <tspan
          dx={5}
        >
          &lt; 20
          
        </tspan>
      </text>
      <rect
        fill="#8adb96"
        fontSize={3}
        height={-6}
        width={10}
        x={152}
        y={116}
      />
      <text
        fill="#8adb96"
        fontSize={3}
        textAnchor="middle"
        x={152}
        y={107.375}
      >
        <tspan
          dx={5}
        >
          &lt; 20
          
        </tspan>
      </text>
      <rect
        fill="#6895eb"
        fontSize={3}
        height={11.25}
        width={10}
        x={162}
        y={98.75}
      />
      <text
        fill="#6895eb"
        fontSize={3}
        textAnchor="middle"
        x={162}
        y={96.125}
      >
        <tspan
          dx={5}
        >
          31.25
          
        </tspan>
      </text>
      <text
        fontSize={4.5}
        textAnchor="middle"
        x={142}
        y={117.875}
      >
        Group 5
      </text>
      <path
        d="m43 110h132"
        stroke="#000"
        strokeWidth={0.1}
      />
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={110}
      >
        <tspan>
          20
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={104.70588235294117}
      >
        <tspan>
          25
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={99.41176470588235}
      >
        <tspan>
          30
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={94.11764705882354}
      >
        <tspan>
          35
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={88.82352941176471}
      >
        <tspan>
          40
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={83.52941176470588}
      >
        <tspan>
          45
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={78.23529411764706}
      >
        <tspan>
          50
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={72.94117647058823}
      >
        <tspan>
          55
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={67.64705882352942}
      >
        <tspan>
          60
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={62.35294117647059}
      >
        <tspan>
          65
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={57.05882352941177}
      >
        <tspan>
          70
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={51.76470588235294}
      >
        <tspan>
          75
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={46.470588235294116}
      >
        <tspan>
          80
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={41.17647058823529}
      >
        <tspan>
          85
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={35.882352941176464}
      >
        <tspan>
          90
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={30.588235294117652}
      >
        <tspan>
          95
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={25.294117647058826}
      >
        <tspan>
          100
          
        </tspan>
      </text>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#71a2ff"
          height={10}
          width={10}
          x={46}
          y={141}
        />
        <text
          x={61.25}
          y={146.25}
        >
          Maelstorm
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#c0d4e2"
          height={10}
          width={10}
          x={112}
          y={141}
        />
        <text
          x={127.25}
          y={146.25}
        >
          Spring
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#cbcbcb"
          height={10}
          width={10}
          x={46}
          y={154.5}
        />
        <text
          x={61.25}
          y={159.75}
        >
          Electro
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#e57878"
          height={10}
          width={10}
          x={112}
          y={154.5}
        />
        <text
          x={127.25}
          y={159.75}
        >
          HBO
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#8adb96"
          height={10}
          width={10}
          x={46}
          y={168}
        />
        <text
          x={61.25}
          y={173.25}
        >
          Netflix
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#6895eb"
          height={10}
          width={10}
          x={112}
          y={168}
        />
        <text
          x={127.25}
          y={173.25}
        >
          Amazon
        </text>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Charts Two Groups Of Six Columns Min Value Minus 20 Max Value 100 And Dy 18 1`] = `
<div
  className="Grid-sc-1m9mzof-0 dZdgqZ Page__ChartContainer-sc-5msxqn-0 dFltLJ"
>
  <div
    className="ChartContainer-sc-1lnti1a-0 creGaQ"
  >
    <h1
      className="ChartTitle__Title-sc-8rh5zq-0 gtnimY"
    >
      Column chart: 3 groups of 5 elements
    </h1>
    <svg
      height="100%"
      viewBox="0 -12.25 198 228.375"
      width="100%"
    >
      <rect
        fill="#71a2ff"
        fontSize={3}
        height={28.282352941176473}
        width={10}
        x={46}
        y={81.71764705882353}
      />
      <text
        fill="#71a2ff"
        fontSize={3}
        textAnchor="middle"
        x={46}
        y={79.09264705882353}
      >
        <tspan
          dx={5}
        >
          50.1
          
        </tspan>
      </text>
      <rect
        fill="#c0d4e2"
        fontSize={3}
        height={33.09647058823529}
        width={10}
        x={56}
        y={76.90352941176471}
      />
      <text
        fill="#c0d4e2"
        fontSize={3}
        textAnchor="middle"
        x={56}
        y={74.27852941176471}
      >
        <tspan
          dx={5}
        >
          60.33
          
        </tspan>
      </text>
      <rect
        fill="#cbcbcb"
        fontSize={3}
        height={10.823529411764707}
        width={10}
        x={66}
        y={99.1764705882353}
      />
      <text
        fill="#cbcbcb"
        fontSize={3}
        textAnchor="middle"
        x={66}
        y={96.5514705882353}
      >
        <tspan
          dx={5}
        >
          13
          
        </tspan>
      </text>
      <rect
        fill="#e57878"
        fontSize={3}
        height={15.529411764705884}
        width={10}
        x={76}
        y={94.47058823529412}
      />
      <text
        fill="#e57878"
        fontSize={3}
        textAnchor="middle"
        x={76}
        y={91.84558823529412}
      >
        <tspan
          dx={5}
        >
          23
          
        </tspan>
      </text>
      <rect
        fill="#8adb96"
        fontSize={3}
        height={20.235294117647058}
        width={10}
        x={86}
        y={89.76470588235294}
      />
      <text
        fill="#8adb96"
        fontSize={3}
        textAnchor="middle"
        x={86}
        y={87.13970588235294}
      >
        <tspan
          dx={5}
        >
          33
          
        </tspan>
      </text>
      <rect
        fill="#6895eb"
        fontSize={3}
        height={28.705882352941178}
        width={10}
        x={96}
        y={81.29411764705883}
      />
      <text
        fill="#6895eb"
        fontSize={3}
        textAnchor="middle"
        x={96}
        y={78.66911764705883}
      >
        <tspan
          dx={5}
        >
          51
          
        </tspan>
      </text>
      <text
        fontSize={4.5}
        textAnchor="middle"
        x={76}
        y={117.875}
      >
        Group 1
      </text>
      <rect
        fill="#71a2ff"
        fontSize={3}
        height={47.05882352941176}
        width={10}
        x={112}
        y={62.94117647058824}
      />
      <text
        fill="#71a2ff"
        fontSize={3}
        textAnchor="middle"
        x={112}
        y={60.31617647058824}
      >
        <tspan
          dx={5}
        >
          90
          
        </tspan>
      </text>
      <rect
        fill="#c0d4e2"
        fontSize={3}
        height={51.868235294117646}
        width={10}
        x={122}
        y={58.131764705882354}
      />
      <text
        fill="#c0d4e2"
        fontSize={3}
        textAnchor="middle"
        x={122}
        y={55.506764705882354}
      >
        <tspan
          dx={5}
        >
          100.22
          
        </tspan>
      </text>
      <rect
        fill="#cbcbcb"
        fontSize={3}
        height={11.294117647058822}
        width={10}
        x={132}
        y={98.70588235294117}
      />
      <text
        fill="#cbcbcb"
        fontSize={3}
        textAnchor="middle"
        x={132}
        y={96.08088235294117}
      >
        <tspan
          dx={5}
        >
          14
          
        </tspan>
      </text>
      <rect
        fill="#e57878"
        fontSize={3}
        height={9.51529411764706}
        width={10}
        x={142}
        y={100.48470588235294}
      />
      <text
        fill="#e57878"
        fontSize={3}
        textAnchor="middle"
        x={142}
        y={97.85970588235294}
      >
        <tspan
          dx={5}
        >
          10.22
          
        </tspan>
      </text>
      <rect
        fill="#8adb96"
        fontSize={3}
        height={11.294117647058822}
        width={10}
        x={152}
        y={98.70588235294117}
      />
      <text
        fill="#8adb96"
        fontSize={3}
        textAnchor="middle"
        x={152}
        y={96.08088235294117}
      >
        <tspan
          dx={5}
        >
          14
          
        </tspan>
      </text>
      <rect
        fill="#6895eb"
        fontSize={3}
        height={19.41176470588235}
        width={10}
        x={162}
        y={90.58823529411765}
      />
      <text
        fill="#6895eb"
        fontSize={3}
        textAnchor="middle"
        x={162}
        y={87.96323529411765}
      >
        <tspan
          dx={5}
        >
          31.25
          
        </tspan>
      </text>
      <text
        fontSize={4.5}
        textAnchor="middle"
        x={142}
        y={117.875}
      >
        Group 5
      </text>
      <path
        d="m43 110h132"
        stroke="#000"
        strokeWidth={0.1}
      />
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={110}
      >
        <tspan>
          -10
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={101}
      >
        <tspan>
          8
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={92}
      >
        <tspan>
          26
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={83}
      >
        <tspan>
          44
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={74}
      >
        <tspan>
          62
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={65}
      >
        <tspan>
          80
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={56}
      >
        <tspan>
          98
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={47}
      >
        <tspan>
          116
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={38}
      >
        <tspan>
          134
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={29}
      >
        <tspan>
          152
          
        </tspan>
      </text>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#71a2ff"
          height={10}
          width={10}
          x={46}
          y={141}
        />
        <text
          x={61.25}
          y={146.25}
        >
          Maelstorm
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#c0d4e2"
          height={10}
          width={10}
          x={112}
          y={141}
        />
        <text
          x={127.25}
          y={146.25}
        >
          Spring
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#cbcbcb"
          height={10}
          width={10}
          x={46}
          y={154.5}
        />
        <text
          x={61.25}
          y={159.75}
        >
          Electro
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#e57878"
          height={10}
          width={10}
          x={112}
          y={154.5}
        />
        <text
          x={127.25}
          y={159.75}
        >
          HBO
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#8adb96"
          height={10}
          width={10}
          x={46}
          y={168}
        />
        <text
          x={61.25}
          y={173.25}
        >
          Netflix
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#6895eb"
          height={10}
          width={10}
          x={112}
          y={168}
        />
        <text
          x={127.25}
          y={173.25}
        >
          Amazon
        </text>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Charts Two Groups Of Two Columns 1`] = `
<div
  className="Grid-sc-1m9mzof-0 dZdgqZ Page__ChartContainer-sc-5msxqn-0 dFltLJ"
>
  <div
    className="ChartContainer-sc-1lnti1a-0 creGaQ"
  >
    <h1
      className="ChartTitle__Title-sc-8rh5zq-0 gtnimY"
    >
      Column chart: 3 groups, 3 elements
    </h1>
    <svg
      height="100%"
      viewBox="0 -12.25 198 228.375"
      width="100%"
    >
      <rect
        fill="#71a2ff"
        fontSize={3}
        height={39.992017561364996}
        width={10}
        x={46}
        y={70.007982438635}
      />
      <text
        fill="#71a2ff"
        fontSize={3}
        textAnchor="middle"
        x={46}
        y={67.382982438635}
      >
        <tspan
          dx={5}
        >
          50.1
          
        </tspan>
      </text>
      <rect
        fill="#c0d4e2"
        fontSize={3}
        height={48.15805228497305}
        width={10}
        x={56}
        y={61.84194771502695}
      />
      <text
        fill="#c0d4e2"
        fontSize={3}
        textAnchor="middle"
        x={56}
        y={59.21694771502695}
      >
        <tspan
          dx={5}
        >
          60.33
          
        </tspan>
      </text>
      <text
        fontSize={4.5}
        textAnchor="middle"
        x={56}
        y={117.875}
      >
        Group 1
      </text>
      <rect
        fill="#71a2ff"
        fontSize={3}
        height={71.84194771502695}
        width={10}
        x={112}
        y={38.15805228497305}
      />
      <text
        fill="#71a2ff"
        fontSize={3}
        textAnchor="middle"
        x={112}
        y={35.53305228497305}
      >
        <tspan
          dx={5}
        >
          90
          
        </tspan>
      </text>
      <rect
        fill="#c0d4e2"
        fontSize={3}
        height={80}
        width={10}
        x={122}
        y={30}
      />
      <text
        fill="#c0d4e2"
        fontSize={3}
        textAnchor="middle"
        x={122}
        y={27.375}
      >
        <tspan
          dx={5}
        >
          100.22
          
        </tspan>
      </text>
      <text
        fontSize={4.5}
        textAnchor="middle"
        x={122}
        y={117.875}
      >
        Group 2
      </text>
      <path
        d="m43 110h92"
        stroke="#000"
        strokeWidth={0.1}
      />
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={110}
      >
        <tspan>
          0
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={101.81818181818181}
      >
        <tspan>
          10
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={93.63636363636364}
      >
        <tspan>
          20
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={85.45454545454545}
      >
        <tspan>
          30
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={77.27272727272728}
      >
        <tspan>
          40
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={69.0909090909091}
      >
        <tspan>
          50
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={60.90909090909091}
      >
        <tspan>
          60
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={52.72727272727273}
      >
        <tspan>
          70
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={44.54545454545455}
      >
        <tspan>
          80
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={36.36363636363636}
      >
        <tspan>
          90
          
        </tspan>
      </text>
      <text
        fill="#000000"
        fontSize={3}
        textAnchor="middle"
        x={24}
        y={28.181818181818187}
      >
        <tspan>
          100
          
        </tspan>
      </text>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#71a2ff"
          height={10}
          width={10}
          x={46}
          y={141}
        />
        <text
          x={61.25}
          y={146.25}
        >
          Maelstorm
        </text>
      </g>
      <g
        fontSize={3}
        width={80}
      >
        <rect
          fill="#c0d4e2"
          height={10}
          width={10}
          x={112}
          y={141}
        />
        <text
          x={127.25}
          y={146.25}
        >
          Spring
        </text>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Editor Editor Of All Charts 1`] = `null`;

exports[`Storyshots Editor Editor Of Column And Bar Sibling Charts 1`] = `null`;

exports[`Storyshots Editor Editor Of Column And Line Charts 1`] = `null`;

exports[`Storyshots Editor Editor Of Line And Bar Sibling Charts 1`] = `null`;

exports[`Storyshots Editor Editor Of Pie And Bar Sibling Charts 1`] = `null`;

exports[`Storyshots Editor Initial Editor 1`] = `null`;

exports[`Storyshots Image Editor Of Image Content 1`] = `null`;

exports[`Storyshots Image Image Content 1`] = `
<div
  className="Image__ImageContainer-pzp13f-0 jvVeoS"
>
  <img
    align="middle"
    src="https://foter.com/photos/394/dock-watering-natural.jpg"
  />
</div>
`;

exports[`Storyshots RichText Editor Of Multiline Content 1`] = `null`;

exports[`Storyshots RichText Editor Of Single Line Content 1`] = `null`;

exports[`Storyshots RichText Multiline Content 1`] = `
<div
  className="Draft-sc-1bw3sri-0 cUHcdK DraftEditor/root DraftEditor/alignLeft"
>
  <div
    data-contents="true"
  >
    <div
      className="Draft-sc-1bw3sri-0 cUHcdK"
      data-block={true}
      data-offset-key="3ofq1-0-0"
    >
      <div
        className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
        data-offset-key="3ofq1-0-0"
      >
        <span
          data-offset-key="3ofq1-0-0"
          style={Object {}}
        >
          <span
            data-text="true"
          >
            This block is draft.js content. Click here to edit the text.
          </span>
        </span>
      </div>
    </div>
    <div
      className="Draft-sc-1bw3sri-0 cUHcdK"
      data-block={true}
      data-offset-key="99k9b-0-0"
    >
      <div
        className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
        data-offset-key="99k9b-0-0"
      >
        <span
          data-offset-key="99k9b-0-0"
          style={Object {}}
        >
          <br
            data-text="true"
          />
        </span>
      </div>
    </div>
    <div
      className="Draft-sc-1bw3sri-0 cUHcdK"
      data-block={true}
      data-offset-key="3hni1-0-0"
    >
      <div
        className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
        data-offset-key="3hni1-0-0"
      >
        <span
          data-offset-key="3hni1-0-0"
          style={Object {}}
        >
          <span
            data-text="true"
          >
            We are planning to add text formatting toolbar soon.
          </span>
        </span>
      </div>
    </div>
    <div
      className="Draft-sc-1bw3sri-0 cUHcdK"
      data-block={true}
      data-offset-key="5d97a-0-0"
    >
      <div
        className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
        data-offset-key="5d97a-0-0"
      >
        <span
          data-offset-key="5d97a-0-0"
          style={Object {}}
        >
          <br
            data-text="true"
          />
        </span>
      </div>
    </div>
    <div
      className="Draft-sc-1bw3sri-0 cUHcdK"
      data-block={true}
      data-offset-key="cgfs1-0-0"
    >
      <div
        className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
        data-offset-key="cgfs1-0-0"
      >
        <span
          data-offset-key="cgfs1-0-0"
          style={Object {}}
        >
          <span
            data-text="true"
          >
            Draft.js is a framework for building rich text editors in React,
          </span>
        </span>
      </div>
    </div>
    <div
      className="Draft-sc-1bw3sri-0 cUHcdK"
      data-block={true}
      data-offset-key="pu3o-0-0"
    >
      <div
        className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
        data-offset-key="pu3o-0-0"
      >
        <span
          data-offset-key="pu3o-0-0"
          style={Object {}}
        >
          <span
            data-text="true"
          >
            powered by an immutable model and abstracting over cross-browser differences.
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots RichText Single Line Content 1`] = `
<div
  className="Draft-sc-1bw3sri-0 cUHcdK DraftEditor/root DraftEditor/alignLeft"
>
  <div
    data-contents="true"
  >
    <div
      className="Draft-sc-1bw3sri-0 cUHcdK"
      data-block={true}
      data-offset-key="3ofq1-0-0"
    >
      <div
        className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
        data-offset-key="3ofq1-0-0"
      >
        <span
          data-offset-key="3ofq1-0-0"
          style={Object {}}
        >
          <span
            data-text="true"
          >
            This block is draft.js content. Click here to edit the text.
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
